[package]
name = "pathfinder_rasterize"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_color = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_gl = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_gpu = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_canvas = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_resources = { git = "https://github.com/s3bk/pathfinder" }
pdf_font = { git = "https://github.com/pdf-rs/font", package="font" }
gl = "*"
image = "*"
khronos-egl = { version = "*", features = ["static"] }

[dev-dependencies]
image = "*"
pathfinder_svg = { git = "https://github.com/s3bk/pathfinder" }
usvg = "*"